@@ -23,6 +23,7 @@
 #include "rkgraphicsdevice_backendtransmitter.h"
 #include "../rkrbackend.h"
 #include "../rkreventloop.h"
+#include "../../debug.h"
 
 extern "C" {
 #include <R_ext/GraphicsEngine.h>
@@ -63,6 +64,10 @@ public:
 					}
 					checkHandleError ();
 				}
+			}
+			if (R_interrupts_pending && have_lock) {
+				RKGraphicsDeviceBackendTransmitter::mutex.unlock ();
+				have_lock = false;
 			}
 		} END_SUSPEND_INTERRUPTS;
 	}
@@ -430,3 +435,82 @@ static Rboolean RKD_NewFrameConfirm (pDevDesc dev) {
 	// Return value FALSE: Let R ask, instead
 }
 
+#if R_VERSION >= R_Version (2, 12, 0)
+void RKD_EventHelper (pDevDesc dev, int code) {
+	{
+		RKGraphicsDataStreamWriteGuard wguard;
+		if (code == 1) {
+			QString prompt;
+			if (Rf_isEnvironment (dev->eventEnv)) {
+				SEXP sprompt = Rf_findVar (Rf_install ("prompt"), dev->eventEnv);
+				if (Rf_length (sprompt) == 1) prompt = QString::fromUtf8 (CHAR (Rf_asChar (sprompt)));
+			}
+			WRITE_HEADER (RKDStartGettingEvents, dev);
+			RKD_OUT_STREAM << prompt;
+			return;
+		} else if (code == 0) {
+			WRITE_HEADER (RKDStopGettingEvents, dev);
+			return;
+		} else {
+			WRITE_HEADER (RKDFetchNextEvent, dev);
+		}
+	}
+	RK_ASSERT (code == 2);
+	{
+		RKGraphicsDataStreamReadGuard rguard;
+#warning TODO: read while guard is active
+	}
+		qint8 event_code;
+		RKD_IN_STREAM >> event_code;
+		if (event_code == RKDFrontendCancel) {
+			Rf_error ("Interrupted by user");
+			return;  // not reached
+		}
+		if (event_code == RKDNothing) return;
+		else if (event_code == RKDKeyPress) {
+			QString text;
+			qint32 keycode, modifiers;
+			RKD_IN_STREAM >> text >> keycode >> modifiers;
+
+			if (modifiers - (modifiers & Qt::ShiftModifier)) {  // any other modifier than Shift. only. NOTE: devX11.c and devWindows.c handle Ctrl, only as of R 3.0.0
+				QString mod_text;
+				if (modifiers & Qt::ControlModifier) mod_text.append ("ctrl-");
+				if (modifiers & Qt::AltModifier) mod_text.append ("alt-");
+				if (modifiers & Qt::MetaModifier) mod_text.append ("meta-");
+				if (text.isEmpty () && (modifiers & Qt::ShiftModifier)) mod_text.append ("shift-");     // don't apply shift text (where it has already been handled)
+				text = mod_text + text.toUpper ();
+			}
+
+			R_KeyName r_key_name = knUNKNOWN;
+			if (keycode == Qt::Key_Left) r_key_name = knLEFT;
+			else if (keycode == Qt::Key_Right) r_key_name = knRIGHT;
+			else if (keycode == Qt::Key_Up) r_key_name = knUP;
+			else if (keycode == Qt::Key_Down) r_key_name = knDOWN;
+			else if ((keycode >= Qt::Key_F1) && (keycode <= Qt::Key_F12)) r_key_name = (R_KeyName) (knF1 + (keycode - Qt::Key_F1));
+			else if (keycode == Qt::Key_PageUp) r_key_name = knPGUP;
+			else if (keycode == Qt::Key_PageDown) r_key_name = knPGDN;
+			else if (keycode == Qt::Key_End) r_key_name = knEND;
+			else if (keycode == Qt::Key_Home) r_key_name = knHOME;
+			else if (keycode == Qt::Key_Insert) r_key_name = knINS;
+			else if (keycode == Qt::Key_Delete) r_key_name = knDEL;
+#warning: TODO: can this result in an error / interrupt?
+			Rf_doKeybd (dev, r_key_name, text.toUtf8 ());
+		} else {    // all others are mouse events
+			double x, y;
+			qint8 buttons;
+			RKD_IN_STREAM >> buttons >> x >> y;
+#warning: TODO: can this result in an error / interrupt?
+			Rf_doMouseEvent (dev, event_code == RKDMouseDown ? meMouseDown : (event_code == RKDMouseUp ? meMouseUp : meMouseMove), buttons, x, y);
+		}
+qDebug ("got something");
+}
+
+void RKD_onExit (pDevDesc dev) {
+	if (dev->gettingEvent) {
+		RKGraphicsDataStreamWriteGuard wguard;
+		WRITE_HEADER (RKDStopGettingEvents, dev);
+	}
+	dev->gettingEvent = (Rboolean) false;
+}
+
+#endif
